Bug #85: Pas de retour d'erreur si le partage d'écran ou certaines opérations sont refusées
  Modified files:
    o README.md
      Add description to add new translations.
    o src/i18n/*.json
      Rebuild with npm run translate
    o translations/jsonFromDesktop/en.json
    o translations/jsonFromDesktop/fr.json
      Add missing translations added manually in src/i18n/{en|fr}.json

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "يجب أن تمنح حق الوصول إلى الكاميرا الخاصة بك قبل أن تتمكن من استخدامها.",
 		"camera_access_not_found": "لم يتم العثور على كاميرا.",
 		"camera_access_error": "حدث خطأ ، تحقق من أن الكاميرا ليست قيد الاستخدام بواسطة تطبيق آخر وقم بتحديث الصفحة.",
+		"screen_sharing_access": "مشاركة الشاشة",
 		"twincode_error": "يبدو أن رابط \"Click-to-Call\" الذي أدخلته غير صالح.",
 		"general_error_title": "أُووبس!",
 		"general_error_message": "عذرا، هناك خطأ ما."
