--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,9 @@
 {
 	"translation": {
-		"title": "{{appName}} - {{callType}} - {{linkName}}",
 		"thanks_choosing": "Thanks for choosing {{appName}}!",
 		"next_time_app": "Try the mobile app for the full experience!",
 		"more_information": "More information on",
 		"call": "Call",
-		"transfer": "Transfer",
 		"call_back": "Call back or reactivate the link.",
 		"activate_camera": "Activate your camera",
 		"nickname_placeholder": "Name",
@@ -19,10 +17,13 @@
 		"camera_access_denied": "You must grant access to your camera before you can use it.",
 		"camera_access_not_found": "No camera was found.",
 		"camera_access_error": "An error occured, check that the camera is not in use by another application and refresh the page.",
+		"screen_sharing_access": "Screen sharing",
 		"twincode_error": "The Click-to-Call link you entered seems invalid.",
 		"general_error_title": "Oops!",
 		"general_error_message": "Sorry, something went wrong.",
+		"title": "{{appName}} - {{callType}} - {{linkName}}",
 		"audio": "Audio",
+		"transfer": "Transfer",
 		"audio_call_activity_calling": "Calling…",
 		"calls_fragment_call_again_title": "Call back",
 		"audio_call_activity_cannot_call": "Cannot make a voice call",
