--- a/src/i18n/fa.json
+++ b/src/i18n/fa.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "قبل از اینکه بتوانید از دوربین خود استفاده کنید، باید به دوربین خود دسترسی داشته باشید.",
 		"camera_access_not_found": "دوربینی پیدا نشد",
 		"camera_access_error": "خطایی روی داد، بررسی کنید که دوربین توسط برنامه دیگری استفاده نمی شود و صفحه را بازخوانی کنید.",
+		"screen_sharing_access": "اشتراک‌گذاری صفحه‌نمایش",
 		"twincode_error": "پیوند \"Click-to-Call\" که وارد کرده اید نامعتبر به نظر می رسد.",
 		"general_error_title": "اوه!",
 		"general_error_message": "با عرض پوزش، مشکلی پیش آمد."
