--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -4,7 +4,6 @@
 		"next_time_app": "Essayez l'application mobile pour une expérience complète !",
 		"more_information": "Plus d'informations sur",
 		"call": "Appel",
-		"transfer": "Transfert",
 		"call_back": "Rappelez ou réactivez le lien.",
 		"activate_camera": "Activez votre caméra",
 		"nickname_placeholder": "Nom",
@@ -18,9 +17,11 @@
 		"camera_access_denied": "Vous devez accorder l'accès à votre caméra avant de pouvoir l'utiliser.",
 		"camera_access_not_found": "Aucune caméra n'a été trouvée.",
 		"camera_access_error": "Une erreur s'est produite, vérifiez que la caméra n'est pas utilisée par une autre application et rafraîchissez la page.",
+		"screen_sharing_access": "Partage d'écran",
 		"twincode_error": "Le lien Click-to-Call que vous avez entré semble invalide.",
 		"general_error_title": "Oops!",
 		"general_error_message": "Désolé, un problème est survenu.",
+		"transfer": "Transfert",
 		"audio": "Audio",
 		"audio_call_activity_calling": "Appel…",
 		"calls_fragment_call_again_title": "Rappeler",
