--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "カメラを使用する前に、カメラへのアクセスを許可する必要があります。",
 		"camera_access_not_found": "カメラが見つかりませんでした。",
 		"camera_access_error": "エラーが発生しました。カメラが別のアプリケーションで使用されていないことを確認して、ページを更新してください。",
+		"screen_sharing_access": "画面共有",
 		"twincode_error": "入力した「Click-to-Call」リンクは無効のようです。",
 		"general_error_title": "おっとっと！",
 		"general_error_message": "申し訳ありませんが、問題が発生しました。"
