--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "Вы должны предоставить доступ к своей камере, прежде чем сможете ее использовать.",
 		"camera_access_not_found": "Камера не найдена.",
 		"camera_access_error": "Произошла ошибка, убедитесь, что камера не используется другим приложением, и обновите страницу.",
+		"screen_sharing_access": "Демонстрация экрана",
 		"twincode_error": "Введенная вами ссылка \"Click-to-Call\" кажется недействительной.",
 		"general_error_title": "Ой!",
 		"general_error_message": "Извините, что-то пошло не так."
