--- a/src/i18n/uk.json
+++ b/src/i18n/uk.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "Ви повинні надати доступ до своєї камери, перш ніж ви зможете нею користуватися.",
 		"camera_access_not_found": "Камера не знайдена.",
 		"camera_access_error": "Сталася помилка. Переконайтеся, що камера не використовується іншою програмою, і оновіть сторінку.",
+		"screen_sharing_access": "Спільний доступ до екрана",
 		"twincode_error": "Введене вами посилання \"Click-to-Call\" здається недійсним.",
 		"general_error_title": "Ой!",
 		"general_error_message": "Вибач, щось пішло не так."
