--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "अपने कैमरे का उपयोग करने से पहले आपको उस तक पहुंच प्रदान करनी होगी।",
 		"camera_access_not_found": "कोई कैमरा नहीं मिला.",
 		"camera_access_error": "एक त्रुटि उत्पन्न हुई, जांचें कि कैमरा किसी अन्य एप्लिकेशन द्वारा उपयोग में नहीं है और पृष्ठ को ताज़ा करें।",
+		"screen_sharing_access": "स्क्रीन साझा करना",
 		"twincode_error": "आपके द्वारा दर्ज किया गया \"Click-to-Call\" लिंक अमान्य लगता है।",
 		"general_error_title": "उफ़!",
 		"general_error_message": "क्षमा करें, कुछ गलत हो गया।"
