--- a/src/i18n/in.json
+++ b/src/i18n/in.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "Anda harus memberikan akses ke kamera sebelum dapat menggunakannya.",
 		"camera_access_not_found": "Tidak ada kamera yang ditemukan.",
 		"camera_access_error": "Terjadi kesalahan, periksa apakah kamera tidak digunakan oleh aplikasi lain dan segarkan halaman.",
+		"screen_sharing_access": "Berbagi layar",
 		"twincode_error": "Tautan \"Click-to-Call\" yang Anda masukkan tampaknya tidak valid.",
 		"general_error_title": "Ups!",
 		"general_error_message": "Maaf, terjadi kesalahan."
