--- a/src/i18n/kr.json
+++ b/src/i18n/kr.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "카메라를 사용하려면 먼저 카메라에 대한 액세스 권한을 부여해야 합니다.",
 		"camera_access_not_found": "카메라를 찾을 수 없습니다.",
 		"camera_access_error": "오류가 발생했습니다. 다른 애플리케이션에서 카메라를 사용하고 있지 않은지 확인하고 페이지를 새로고침하세요.",
+		"screen_sharing_access": "화면 공유",
 		"twincode_error": "입력한 \"Click-to-Call\" 링크가 유효하지 않은 것 같습니다.",
 		"general_error_title": "이런!",
 		"general_error_message": "죄송합니다. 문제가 발생했습니다."
