--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "U moet toegang tot uw camera verlenen voordat u deze kunt gebruiken.",
 		"camera_access_not_found": "Er is geen camera gevonden.",
 		"camera_access_error": "Er is een fout opgetreden, controleer of de camera niet door een andere toepassing wordt gebruikt en vernieuw de pagina.",
+		"screen_sharing_access": "Scherm delen",
 		"twincode_error": "De \"Click-to-Call\"-link die u heeft ingevoerd, lijkt ongeldig.",
 		"general_error_title": "Oeps!",
 		"general_error_message": "Sorry, er ging iets mis."
