--- a/src/i18n/no.json
+++ b/src/i18n/no.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "Du må gi tilgang til kameraet før du kan bruke det.",
 		"camera_access_not_found": "Ingen kamera ble funnet.",
 		"camera_access_error": "Det oppstod en feil, sjekk at kameraet ikke er i bruk av et annet program og oppdater siden.",
+		"screen_sharing_access": "Skjermdeling",
 		"twincode_error": "Click-to-Call-koblingen du skrev inn, ser ut til å være ugyldig.",
 		"general_error_title": "Oops!",
 		"general_error_message": "Beklager, noe gikk galt."
