--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -17,6 +17,7 @@
 		"camera_access_denied": "Você deve conceder acesso à sua câmera antes de poder usá-la.",
 		"camera_access_not_found": "Nenhuma câmera foi encontrada.",
 		"camera_access_error": "Ocorreu um erro, verifique se a câmera não está sendo usada por outro aplicativo e atualize a página.",
+		"screen_sharing_access": "Compartilhamento de tela",
 		"twincode_error": "O link \"Click-to-Call\" inserido parece inválido.",
 		"general_error_title": "Ops!",
 		"general_error_message": "Desculpe, algo deu errado."
